<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".AddCitiesActivity">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout android:id="@+id/details" android:layout_width="409dp"
            android:layout_height="601dp" android:orientation="vertical"
            tools:layout_editor_absoluteX="1dp" tools:layout_editor_absoluteY="1dp"
            tools:ignore="MissingConstraints">
            <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/welcomeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="All Available Cities"
                    android:textAlignment="center"
                    android:textColor = "?android:textColorPrimary"
                    android:textSize="30dp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>