...
                android:padding="16dp">

                <TextView
                    android:id="@+id/welcomeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="DashBoard"
                    android:textAlignment="center"
                    android:textColor = "?android:textColorPrimary"
                    android:textSize="30dp"
                    android:textStyle="bold" />

                <Button
...
