<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherActivity">

    <LinearLayout
        android:id="@+id/details"
        android:layout_width="409dp"
        android:layout_height="601dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/weatherWelcomeText"
            android:layout_width="match_parent"
            android:layout_height="58dp" />

        <TextView
            android:id="@+id/weatherInfo"
            android:layout_width="match_parent"
            android:layout_height="268dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>