<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="CS427 Project App" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:textColor = "?android:textColorPrimary"
            android:textSize="50dp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="50dp"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Username"
            android:textSize="20dp"
            android:textColorHint = "?android:textColorPrimary"
            android:layout_marginBottom="30dp"
            android:paddingLeft="20dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:textSize="20dp"
            android:textColorHint = "?android:textColorPrimary"
            android:layout_marginBottom="30dp"
            android:paddingLeft="20dp"/>

        <EditText
            android:id="@+id/repassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="Confirm password"
            android:textSize="20dp"
            android:textColorHint = "?android:textColorPrimary"
            android:layout_marginBottom="30dp"
            android:paddingLeft="20dp"/>

        <Switch
            android:id="@+id/switchSignUp"
            android:textSize="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Enable Dark Mode"
            android:textColor = "?android:textColorPrimary" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Existing User!\n Login"
            android:textAllCaps="false"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>